--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FF102JF5HK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-FF102JF5HK');
+</script>
 <body class="index-page">
 
   <header id="header" class="header d-flex align-items-center fixed-top">
@@ -99,7 +107,7 @@
               一群以中部獨立遊戲熱忱的人所創立的非營利社群組織，期望在中部也能屬於自己的ACG活動。
             </p>
             <ul>
-              <li><i class="bi bi-check-circle"></i> <span>異校遊戲大亂斗(Student Show Game, SSG)</span></li>
+              <li><i class="bi bi-check-circle"></i> <span>異校遊戲大亂鬥(Student Show Game, SSG)</span></li>
               <li><i class="bi bi-check-circle"></i> <span>Global Game Jam(GGJ) 台中場</span></li>
               <li><i class="bi bi-check-circle"></i> <span>Faust Game Jam(FGJ) 台中場</span></li>
             </ul>
@@ -145,11 +153,11 @@
 
         <div class="row g-5">
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="service-item item-cyan position-relative">
               <i class="bi bi-joystick icon"></i>
               <div>
-                <h3>異校遊戲大亂斗(SSG)</h3>
+                <h3>異校遊戲大亂鬥(SSG)</h3>
                 <p>想要完成一款出色的遊戲，
                   都需要經歷「白紙測試」的考驗。
                   勇敢地將開發中的遊戲呈現給玩家試玩，
@@ -162,7 +170,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item item-orange position-relative">
               <i class="bi bi-globe icon"></i>
               <div>
@@ -175,12 +183,12 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="service-item item-teal position-relative">
               <i class="bi bi-emoji-kiss icon"></i>
               <div>
                 <h3>Faust Game Jam(FGJ)</h3>
-                <p>Faust Game Jam，Faust Li（李家屹）是促成我們社群內許多台日互動的重要推手，過去多年來與日本一起舉辦的 Fukushima Game Jam 也是其中一項代表性的成果。但 Faust 很不幸於 2014 年 1 月，Global Game Jam 前夕離開了我們。所以主辦單位這邊希望能夠藉著往後的 FGJ，邀請各位在台灣的遊戲開發社群參與者，一起來紀念他。2018 年起因為日本 Fukushima Game Jam 活動性質調整及時間因素，我們沒有跟隨舉辦，但是本活動仍以「FGJ」來紀念 Faust。
+                <p>原為與日本一起辦理的 Fukushima Game Jam，後為了紀念 Faust Li（李家屹）為台灣遊戲社群的貢獻，邀請各位在台灣的遊戲開發社群參與者，一起來紀念他。本活動仍以「FGJ」來紀念 Faust。
                 </p>
                 <!--
                 <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
@@ -189,18 +197,7 @@
             </div>
           </div><!-- End Service Item -->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
-            <div class="service-item item-red position-relative">
-              <i class="bi bi-easel icon"></i>
-              <div>
-                <h3>跨界聊天會(暫停中)</h3>
-                <p>每月固定一場、固定地點，提供一個空間讓獨立遊戲開發者們可以互相學習、交流開發經驗和技術。開發者們能夠在每月的跨界聊天會中，分享和報告自己的開發進度，以及得到其他開發者的建議和意見，藉此互相監督，共同進步成長。<br/>因場地問題，目前暫緩辦理。</p>
-                <!--
-                <a href="service-details.html" class="read-more stretched-link">Learn More <i class="bi bi-arrow-right"></i></a>
-                -->
-              </div>
-            </div>
-          </div><!-- End Service Item -->
+
 
 
         </div>
